[package]
name = "rust-block-iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29"
bitcoincore-rpc = "0.16.0"
bitcoin-pool-identification = "0.1.12"
rawtx-rs = {git = "https://github.com/0xB10C/rawtx-rs", branch = "2022-08-counterparty", features = [ "counterparty" ]}

